--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.2.0",
     "morgan": "~1.9.1",
     "node": "^21.6.2",
+    "node-linux-x64": "^21.6.2",
     "node.js": "^0.0.1-security",
     "nodemon": "^3.1.0",
     "parser": "^0.1.4",
